@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(drill, 1.0.1, drill@nlnetlabs.nl, drill)
+AC_INIT(libdns, 1.0.1, libdns@nlnetlabs.nl,libdns)
 AC_CONFIG_SRCDIR([ldns-read-zone.c])
 
 AC_AIX
@@ -10,15 +10,9 @@ AC_AIX
 AC_PROG_CC
 AC_PROG_MAKE_SET
 
-# Checks for libraries.
-# Checks for header files.
-#AC_HEADER_STDC
-#AC_HEADER_SYS_WAIT
-# do the very minimum - we can always extend this
-#AC_CHECK_HEADERS([getopt.h stdlib.h stdio.h assert.h netinet/in.hctype.h time.h])
-AC_CHECK_HEADERS([sys/types.h getopt.h stdlib.h stdio.h assert.h netinet/in.hctype.h netinet/udp.h time.h pcap.h net/bpf.h arpa/inet.h sys/time.h sys/socket.h netinet/in.h netinet/ip.h netinet/if_ether.h ])
+AC_CHECK_HEADERS([sys/types.h getopt.h stdlib.h stdio.h assert.h netinet/in.hctype.h netinet/udp.h time.h pcap.h net/bpf.h arpa/inet.h sys/time.h sys/socket.h netinet/in.h netinet/ip.h netinet/if_ether.h])
 AC_CHECK_HEADERS([sys/param.h sys/mount.h],,,
-[
+[ [AC_INCLUDES_DEFAULT]
   [
    #if HAVE_SYS_PARAM_H
    # include <sys/param.h>
@@ -44,7 +38,7 @@ AC_CHECK_LIB(ldns, ldns_rr_new,, [
 
 AC_CHECK_HEADER(ldns/dns.h,,  [
 	AC_MSG_ERROR([Can't find ldns headers])
-	]
+	], [AC_INCLUDES_DEFAULT]
 )
 
 AC_CHECK_LIB(pcap, pcap_open_offline,, [
@@ -54,7 +48,7 @@ AC_CHECK_LIB(pcap, pcap_open_offline,, [
 
 AC_CHECK_HEADER(pcap.h,,  [
 	AC_MSG_ERROR([Can't find pcap library headers (needed for dpa)])
-	]
+	], [AC_INCLUDES_DEFAULT]
 )
 
 AH_BOTTOM([
