@@ -105,6 +105,15 @@ ldns_write_uint32(void *dst, uint32_t data)
 #endif
 }
 
+#ifndef HAVE_ISBLANK
+/* gnuism */
+static int 
+isblank(int c)
+{
+ return (c==' ') || (c=='\t');
+}
+#endif
+
 /* warning. */
 INLINE void
 ldns_write_uint64_as_uint48(void *dst, uint64_t data)
